<resources>
    <string name="app_name">PBAS</string>
    <string name="full_app_name">Picture Based Authentication System</string>
    <string name="setup_button_text">Setup</string>
    <string name="login_button_text">Login</string>
    <string name="select_image">Select Image</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="next_point">Next Point</string>
    <string name="submit">Submit</string>
    <string name="start">Start</string>
    <string name="login_success">You have successfully logged in!</string>
    <string name="click_start_to_begin">Click Start to Begin</string>
    <string name="enter">Enter</string>
</resources>